--- a/05-tailwind/src/style.css
+++ b/05-tailwind/src/style.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    font-family: "Comic Sans MS"
+  }
+}
+@layer components {
+  .search-input {
+    @apply w-60 mb-5 block;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+}
+
+@layer utilities {
+  .grayed-out-disabled {
+    @apply disabled:opacity-50;
+  }
+}
