--- a/05-tailwind/src/style.css
+++ b/05-tailwind/src/style.css
@@ -4,12 +4,19 @@
 
 @layer base {
   body {
-    font-family: "Comic Sans MS"
+    font-family: "Comic Sans MS";
+    height: 100%;
+    min-height: 100vh;
+  }
+  #root {
+    min-height: 100vh;
+    height: 100%;
   }
 }
+
 @layer components {
   .search-input {
-    @apply w-60 mb-5 block;
+    @apply mb-5 block w-60;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 }
@@ -18,4 +25,131 @@
   .grayed-out-disabled {
     @apply disabled:opacity-50;
   }
+}
+
+.loader {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.details {
+  width: 1100px;
+  margin: 0 auto;
+  padding: 15px;
+  margin-bottom: 25px;
+  border-radius: 6px;
+  background: #faeff0;
+  box-shadow: 0px 0px 12px #aaa, -0px -0px 12px #fff;
+}
+
+.carousel {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 400px;
+  margin-top: 8px;
+}
+
+.carousel > img {
+  max-width: 45%;
+  max-height: 400px;
+}
+
+.carousel-smaller {
+  width: 50%;
+}
+
+.carousel-smaller > img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 15px;
+  cursor: pointer;
+  border: 2px solid #333;
+}
+
+.carousel-smaller > img.active {
+  border-color: #333;
+  opacity: 0.6;
+}
+
+#modal .buttons button {
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.search-params button,
+#modal button,
+#modal a,
+.details button {
+  background-color: #ad343e;
+  padding: 5px 25px;
+  color: white;
+  font-size: 18px;
+  border: #333 1px solid;
+  border-radius: 5px;
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+#modal a {
+  display: inline-block;
+  margin-right: 15px;
+  text-decoration: none;
+}
+
+#modal {
+  background-color: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal:empty {
+  display: none;
+}
+
+#modal > div {
+  background-color: white;
+  max-width: 500px;
+  padding: 15px;
+  text-align: center;
+  border-radius: 30px;
+  background: #faeff0;
+}
+
+#modal .buttons button {
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.pet img {
+  width: 100px;
+  min-height: 100px;
+}
+
+.image-container {
+  clip-path: circle(50% at 50% 50%);
+  width: 100px;
+  height: 100px;
+  float: left;
+  margin: 0px 20px 0px 10px;
+}
+
+.image-container {
+  margin: 0 auto;
+  float: none;
 }
