--- a/10-redux/src/style.css
+++ b/10-redux/src/style.css
@@ -87,8 +87,8 @@ body {
   text-overflow: ellipsis;
 }
 
-header>a,
-#root>div>h1 {
+header > a,
+#root > div > h1 {
   display: inline-block;
   background-image: url(http://static.frontendmasters.com/resources/2019-05-02-complete-intro-react-v5/image-logo.png);
   filter: brightness(150%);
@@ -150,7 +150,7 @@ header {
   margin-top: 8px;
 }
 
-.carousel>img {
+.carousel > img {
   max-width: 45%;
   max-height: 400px;
 }
@@ -159,7 +159,7 @@ header {
   width: 50%;
 }
 
-.carousel-smaller>img {
+.carousel-smaller > img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
@@ -169,7 +169,7 @@ header {
   border: 2px solid #333;
 }
 
-.carousel-smaller>img.active {
+.carousel-smaller > img.active {
   border-color: #333;
   opacity: 0.6;
 }
@@ -190,7 +190,8 @@ header {
 .search-params button,
 #modal button,
 #modal a,
-.details button {
+.details button,
+.button {
   background-color: #ad343e;
   padding: 5px 25px;
   color: white;
@@ -200,6 +201,13 @@ header {
   display: block;
   margin: 0 auto;
   cursor: pointer;
+}
+.search-params button {
+  display: inline;
+}
+.search-params button.button {
+  display: inline-block;
+  margin-left: 30px;
 }
 
 #modal a {
@@ -237,7 +245,7 @@ header {
   display: none;
 }
 
-#modal>div {
+#modal > div {
   background-color: white;
   max-width: 500px;
   padding: 15px;
@@ -329,7 +337,7 @@ header {
     float: none;
   }
 
-  .carousel-smaller>img {
+  .carousel-smaller > img {
     width: 60px;
     height: 60px;
   }
